data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_799.wast
;; 10. **Backward Jump with Incorrect Stack Height**:     - **Description**: Implement a loop where backward jumps do not match the operand stack height expected by the loop entry, causing potential mismatches in stack operations.     - **Constraint**: Validate backward jump stack height consistency.     - **CFG Impact**: Mismatched stack height on backward jumps causes invalid loop continuation paths within CFG.

(assert_invalid
  (module
    (func $invalid-backward-jump-stack-height
      (i32.const 0)  ;; Push 0 onto the stack
      (loop (result i32)
        (br 0)      ;; Branch to the start of the loop
        (i32.const 1) ;; Push 1 onto the stack (unreachable)
      )
    )
  )
  "type mismatch"
)